delete the quit process, not UserActinsMenu

BUG: 351643
FIXED-IN: 5.4.1
REVIEW: 124895